<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Runes of Sherlock</string>
    <string name="action_settings">Quit</string>
    <string name="activity_second">The value of the runes</string>
    <string name="img_button">Image button</string>
    <string name="ehwaz_up_wd"> 
        <b>Rune of change</b> \n Gradual change for the better
    </string>
    <string name="ehwaz_up">
		<b>Rune of change. The movement of progress. </b>\n\n
This is the Rune of teamwork, harmony and cooperation.  
This unity of work and ideal does not require the sacrifice of individuality.  
It can portend a time of transition and physical shifts.  
Steady growth and development slowly grow into rich accomplishments.  
Face the future with confident expectation that all will be well.  
This Rune can represent a partner, either in business or in romance.     
     </string>
	<string name="ehwaz_down_wd">
	    <b>Rune obstacles</b>\n 
	   The movement stalled
	</string>
    <string name="ehwaz_down">
    	<b>Rune obstacles</b>\n\n
There is a danger of losing yourself in your partner.  
A blockage in the force embodied by Ehwaz can result in disharmony, 
separation, divorce and betrayal.
    </string>
    <string name="uruz_up_wd">
        <b>Rune of the new form</b>\n 
       Let the new force in your life
	</string>
    <string name="uruz_up">
        <b>Rune of the new form</b>\n\n
       This is the energy of the Primal Source, the original procreation.  
       It symbolizes growth and transformation.  
       The life you have been living is due for major change.  
       This is not a Rune of ending, but is instead a Rune of new beginnings.  
       There may be darkness, but it is that of a tunnel leading to a new life. 
        The light will be brighter at the end.  
        Prepare for an opportunity disguised as a loss.
    </string>
    <string name="uruz_down_wd">
        <b>Rune disorganization Force</b>\n
		You can understand the reason for the loss of power
	</string>
    <string name="uruz_down">
        <b>Rune disorganization Force</b>\n\n
        Could indicate over-protectiveness or possessiveness, 
        or the misuse of strength or power.  
        You may fail to take advantage of the moment.  
        It is possible that your strength may seem to be used against you.  
        The seeming failure may come as a minor or major jolt, 
        depending on your awareness.   Remember, 
        life is a cycle and you will again reach this 
        point to again have this choice.
    </string>
    <string name="gebo_wd">
        <b>Rune partnership</b>\n	
        Strive for unity  
	</string>
        <string name="gebo">
        <b>Rune partnership</b>\n\n
        Be prepared to be generous, and to accept the generosity of others.  
        You may receive spiritual or a material gift, or the gift of another’s heart.   
        If a union is at hand, keep part of yourself separate.  
        You should both maintain your own identities.  
        It can represent someone in a service industry, 
        or someone who works for a charitable or ecological organization.
        Negative aspects of the Rune, however, 
        may include a tendency toward being a spendthrift, 
        wasting your material or spiritual resources.  
        It can symbolize the disruption of a family or a friendship.
    </string>
	<string name="hagalaz_wd">
		<b>Rune complete break</b>\n
		Events beyond your control
	</string>
	<string name="hagalaz">
        <b>Rune complete break</b>\n\n
        There is a need to break free from constraints, 
        and prepare for a change in your life or your situation.  
        There are some things beyond your control, and 
        there may be strife and turmoil coming into your life.  
        It signals a need to re-focus your life, aligning it with mythic models.  
        Though this Rune has only an upright position, 
        it operates through reversal.  
        You may feel as though you are waking from a 
        long sleep and take some time to come to your full senses.  
        There may be a loss before there is a great gain.  
        This Rune may symbolize a magician, sorcerer, 
        mystic, witch, mage or priest.
        Negative aspect can indicate the potential of a change for the worse.  
        This can, however, be averted by preparation and planning.  
        While crisis may not be totally avoided, it can be controlled.
    </string>
	<string name="algiz_up_wd">
	    <b>Rune of protection</b>\n 
	    Foreshadows a twist of fate
	</string>
	<string name="algiz_up">
        <b>Rune of protection</b>\n\n
        This Rune is a two-edged sword, and can bode danger 
        for anyone other than an experienced or gifted Vitki, or Rune Mage.   
        One should not try to grasp this sword, but to become one with it.  
        Brains, not brawn, will serve you well in problems faced at this time.  
        This Rune generally does not signify persons, 
        but rather divine or spiritual beings and/or forces. 
         It can foretell an awakening of craft and cunning in the individual.
    </string>
	<string name="algiz_down_wd">
	    <b>Rune of flexibility</b>\n 
	    Be flexible
	</string>
	<string name="algiz_down">
        <b>Rune of flexibility</b>\n\n
        There may be hidden danger waiting to ensnare you.  
        Hasty and ill-considered actions will plunge you into serious problems.  
        There is the danger of being swallowed up by archetypal forces, 
        which you think to shape to your will with inadequate knowledge or preparation.  
        This can result in damage to both spiritual and physical health.
    </string>
	<string name="raido_up_wd">
	    <b>Rune of a way</b> 
	    Trust the course of events
	</string>
	<string name="raido_up">
        <b>Rune of a way</b>\n\n
		This may portend a journey, either physical or spiritual, 
		or it may signal a change in a relationship or your domestic situation.   
		It can symbolize a person in the fields of law 
		and justice on one hand, or travel and transportation on the other.   
		Justice can be expected, but remember that 
		we are not intended to rely on our power alone.  
		Ask guidance from the Divine, and know that you will be led to the right action.         
    </string>
	<string name="raido_down_wd">
	    <b>Rune of surprises</b>\n 
	    Mindfulness manifest throughout
	</string>
	<string name="raido_down">
        <b>Rune of surprises</b>\n\n
		This can bode suffering and hard times.  
		Personal relationships are threatened now.  
		Break-ups may be more plentiful than unions, 
		but remember, even failures may 
		be opportunities in disguise.       
    </string>
	<string name="nauthiz_up_wd">
	    <b>Rune of retardation</b>\n 
	    Now a dark time for you
	</string>
	<string name="nauthiz_up">
        <b>Rune of retardation</b>\n\n
		There is stress, but it can be turned into strength.  
		Restraint is called for.  
		There will be holdups, and the need to 
		reconsider your plans carefully.   
		Original thought, creativity and 
		self-reliance could see you through a difficult time.   
		Try to restore harmony in your life,
		 but if you cannot, at least strive for balance.  
		 There is an indication of extreme passion 
		 in a love affair (torrid romance or major crisis.)  
		 This Rune can symbolize a menial worker, 
		 a laborer or farmer, or it can stand for a magician or mage.        
    </string>
	<string name="nauthiz_down_wd">
	    <b>Rune of inner evil</b>\n 
	    Should think twice
	</string>
	<string name="nauthiz_down">
        <b>Rune of inner evil</b>\n\n
		External circumstances are shaping our present situation 
		in ways over which we have no control.  
		We may face pain and hardship, 
		but this can be a source of strength and knowledge.  
		Friction within ourselves, our families, 
		our coworkers may create stress, 
		but cleansing can help to strengthen the character.   
		There will be a temptation to take the easy way out 
		of a stressful situation, but this will be 
		a major mistake, leading to a weakening of one’s character.         
    </string>
	<string name="wunjo_up_wd">
	    <b>Rune of joy</b>\n  
	    End of a period of darkness
	</string>
	<string name="wunjo_up">
        <b>Rune of joy</b>\n\n
		This Rune promises harmony, (personal, domestic and social.) 
		Physical health is either promised, or needs to be attended to.   
		This is a time for new friendships and social (non-sexual) relationships.  
		This may be a time for you to reap the harvest of earlier efforts.  
		Knowledge matures into understanding.  
		Through new clarity existing ambitions, goals or plans may be seen 
		as less desirable than they appeared with a more limited understanding.
    </string>
	<string name="wunjo_down_wd">
	    <b>Rune of crisis</b>\n 
	    Movement through the "dark water"
	</string>
	<string name="wunjo_down">
        <b>Rune of crisis</b>\n\n
		It would be easy to lose your own identity 
		into that of a gestalt, or group mind.  
		A difficult time is at hand. 
		There is light mixed with the dark, 
		good with the ill, but it may be difficult 
		to discern between them.  Poor relationships, 
		strife and alienation, may be forthcoming.       
    </string>
	<string name="kano_up_wd">
	    <b>Rune of clarity</b>\n  
	    Pass the light in your life  
	</string>
	<string name="kano_up">
        <b>Rune of renewed clarity</b>\n\n
		This is the Rune of creation, symbolizing light breaking through to dispel the clouds.   
		It is the fire of inspiration and creativity, of the hearth, the forge and the altar.  
		This Rune can symbolize an artist, or crafts person.  
		Through awareness of the fire’s light, understanding comes 
		to you and enables you to spread light and understanding to others.  
		This can portend a change, a transformation, perhaps a child.
    </string>
	<string name="kano_down_wd">
	    <b>Rune of defilements</b>\n 
	   The destruction aspect of your personality
	</string>
	<string name="kano_down">
        <b>Rune of defilements</b>\n\n
		Clouds are now beginning to cover the sun.  
		A partnership or love affair may be ending.  
		Give up the old gladly, so that the new can be welcomed.  
    </string>
	<string name="isa_wd">
	    <b>Rune of stagnation</b>\n 
	    Be discreet patience
	</string>
	<string name="isa">
        <b>Rune of stagnation</b>\n\n
		Winter has come upon you, chilling your spirit.  
		Difficult situations must be managed through your 
		own inner resources, since you can expect no 
		help from outside yourself.  
		You seem to be in stasis, locked in ice, 
		and unable to move. Any major accomplishment is unlikely now.   
		Concentrate on keeping up, not trying to get ahead.   
		There may be some outdated habit or idea that 
		you need to relinquish, so that the thaw will follow.  
		This Rune may symbolize a rogue, a mystic, a scoundrel, 
		a corpse, or the spirit of one already 
		crossed over into the Summerlands.
		Negative influences, however, 
		can be the weakening of the will, 
		or allowing one to be controlled by others, 
		dominated by outside influences or forces.  
		You may be blinded to the totality of all that 
		is going on in your life, concentrating on 
		trifles and ignoring the more urgent and significant problems.
    </string>
	<string name="jera_wd">
	    <b>Rune of a favorable outcome</b>\n
	     Approximation of a favorable outcome
	</string>
    <string name="ImageView">Image</string>
    <string name="Description">Description</string>
    <string name="Runa_name">Thurisaz</string>
    <string name="Runa_description">Description runas</string>
</resources>