<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkg"
    android:gravity="bottom"
    android:padding="10dp" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/arrow"
        android:contentDescription="@string/img_button"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/textViewInWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageButton1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/Description"
        android:gravity="left"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:text="@string/Runa_description"
        android:textColor="@drawable/text_color" />

    <ImageView
        android:id="@+id/imageViewInWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:contentDescription="@string/ImageView"
        android:src="@drawable/orn_1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/ImageView"
        android:src="@drawable/ansuz" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewInWidget"
        android:layout_alignRight="@+id/imageButton1"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@string/Description"
        android:gravity="center"
        android:text="@string/Runa_name"
        android:textColor="@drawable/text_color"
        android:textStyle="bold" />

</RelativeLayout>